# hackyhour-llms

./: .gitignore  README.md  pyproject.toml
notebooks/: 1_openai_api.ipynb  2_chain_of_thought.ipynb  2_prompt_engineering.ipynb  3_langchain.ipynb  4_react.ipynb  5.0_retrieval_augmented_generation.ipynb  5.1_create_dummy_data.ipynb  dummy_data.json
promptfoo/: promptfooconfig.yaml  prompts.txt
