[tool.poetry]
name = "hackyhour-llms"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hackyhour_llms"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.6"
langchain = "^0.0.309"
openai = "^0.28.1"
python-dotenv = "^1.0.0"
notebook = "^7.0.5"
google-search-results = "^2.4.2"
numexpr = "^2.8.7"
faiss-cpu = "^1.7.4"
tiktoken = "^0.5.1"
langchain-experimental = "^0.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
