[tool.poetry]
name = "hackyhour-llms"
version = "0.1.0"
description = ""
authors = ["trinnovative <info@trinnovative.de>"]
readme = "README.md"
packages = [{include = "hackyhour_llms"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.309"
openai = "^0.28.1"
python-dotenv = "^1.0.0"
notebook = "^7.0.5"
numexpr = "^2.8.7"
faiss-cpu = "^1.7.4"
tiktoken = "^0.5.1"
langchain-experimental = "^0.0.36"
duckduckgo-search = "^3.9.3"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.6"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
